# cqplayer

./: CMakeLists.txt  README.md
basetype/: fratio.h  fsize.h  type_player.h
combase/: CMakeLists.txt  baseInterface.cpp  baseInterface.h  coCreate.h  comPtr.h  errorDef.h
cqplayer/: CMakeLists.txt  cqplayer.cpp  cqplayer.h  playerImpl.cpp  playerImpl.h  playerImpl_private.cpp  playerImpl_thread.cpp
cqplayer/interface/: clockInterface.h  ctrlInterface.h  demuxInterface.h  effectInterface.h  frameInterface.h  interface_ids.cpp  muxInterface.h  paramInterface.h  playerInterface.h  renderInterface.h  sourceInterface.h  speedInterface.h  stateInterface.h
cqplayer/kclock/: clocksource.cpp  clocksource.h
cqplayer/kframe/: dummyframe.cpp  dummyframe.h
cqplayer/krender/: demuxRender.cpp  demuxRender.h  nullrender.cpp  nullrender.h
cqplayer/ksource/: colorbar.cpp  colorbar.h  effectSource.cpp  effectSource.h  muxSource.cpp  muxSource.h
mythread/: CMakeLists.txt  mythread.cpp  mythread.h
